Client/wwwroot/css/site.css
/* ... */
.dropdown-item {
    cursor: pointer;
}

.dropdown-toggle::after {
    margin-left: 0;
}

html, body, .contents {
    height: 100%;
}

body {
    font-family: 'Akrobat', sans-serif;
    padding-top: 5rem;
    overflow: hidden;
}

    body.modal-open {
        padding-right: 0 !important;
    }

.contents {
    display: flex;
    justify-content: space-between;
    padding-right: 0;
}

main {
    width: 100%;
    overflow-y: hidden;
}

h1 {
    font-size: 1.5rem;
    font-weight: bold;
}

h2 {
    font-size: 1rem;
    font-weight: bold;
}

nav {
    align-items: stretch;
    background-color: hsl(210, 100%, 35%);
    background-image: linear-gradient(rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.25) 25%, rgba(0, 0, 0, 0) 70%);
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
    color: white;
    display: flex;
    height: 5rem;
    left: 0;
    padding-right: 1rem;
    position: fixed;
    right: 0;
    top: 0;
    z-index: 1030;
}

.logo {
    align-items: center;
    color: white;
    display: inline-block;
    display: flex;
    flex-direction: column;
    font-size: 1.25rem;
    justify-content: center;
    margin: 0;
    padding: 0.3rem 1rem;
    position: relative;
    text-transform: none;
}

.nav-tab {
    align-items: center;
    background-color: rgba(0, 0, 0, 0.1);
    color: white;
    display: inline-block;
    display: flex;
    flex-direction: column;
    font-size: 0.9rem;
    justify-content: center;
    margin: 0;
    padding: 0.3rem 1rem;
    position: relative;
    text-transform: uppercase;
    transition: 0.2s ease-out;
}

    .nav-tab:hover {
        background-color: rgba(255, 255, 255, 0.3);
        color: white;
        text-decoration: none;
    }

    .nav-tab.active {
        background-color: rgba(255, 255, 255, 0.2);
        color: #fff2cc;
    }

    .nav-tab img {
        height: 2rem;
        margin-bottom: 0.25rem;
    }

    .nav-tab.active img {
        filter: brightness(0) saturate(100%) invert(93%) sepia(18%) saturate(797%) hue-rotate(316deg) brightness(109%) contrast(101%);
    }

    .nav-tab.active:after {
        border-left: 0.6rem solid transparent;
        border-right: 0.6rem solid transparent;
        border-top: 1rem solid rgb(51, 51, 205);
        bottom: -1rem;
        content: "";
        height: 0px;
        position: absolute;
        width: 0px;
        z-index: 1;
    }

    .nav-tab.nav-administrator {
        color: hsl(48, 100%, 75%);
    }

    .nav-tab > div {
        text-align: center;
    }

.user-info {
    align-items: center;
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin-left: auto;
    padding-left: 1rem;
}

    .user-info img {
        margin-right: 0.7rem;
        width: 2.6rem;
    }

    .user-info .username {
        display: block;
        font-weight: 700;
        line-height: 0.7rem;
        margin-top: 0.5rem;
    }

    .user-info a {
        color: #fff2cc;
        font-size: 0.8rem;
    }

.card {
    margin-bottom: 1rem;
}

.sidebar {
    background-color: #333;
    color: white;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 25rem;
}

.not-authorized {
    margin: 2rem;
}

.text {
    margin: 2rem;
}

    .text * {
        line-height: 2;
    }

.container {
    margin: 2rem 15px;
}

.container-min-md {
    min-width: 720px;
}

.container-min-lg {
    min-width: 960px;
}

.container-max-sm {
    max-width: 540px;
}

.container-max-md {
    max-width: 720px;
}

.container-max-lg {
    max-width: 960px;
}

.button-row {
    display: flex;
    justify-content: flex-end;
    align-items: center;
}

    .button-row > :not(:first-child) {
        margin-left: .25rem;
    }

    .button-row > :not(:last-child) {
        margin-right: 0.25rem;
    }

button.btn-fixed {
    min-width: 7.5rem;
}

.draft-order {
    padding: 1.5rem;
    overflow-y: hidden;
}

    .draft-order .draft-order-get-started {
        font-size: 2rem;
        text-align: center;
        color: #888;
    }

    .draft-order h1 {
        font-weight: normal;
    }

    .draft-order .card {
        margin-top: 0;
        background-color: #444;
    }

        .draft-order .card .card-title {
            display: flex;
            flex-direction: column;
            justify-content: space-between;
        }

            .draft-order .card .card-title h2 {
                font-size: 1rem;
                font-weight: bold;
                color: hsl(210, 100%, 65%)
            }

            .draft-order .card .card-title .close {
                margin: -2rem 0 0 auto;
                text-shadow: none;
                #color: #333;
            }

.draft-order-total {
    background-color: hsl(210, 100%, 35%);
    padding: 1rem 2.75rem 2rem;
    margin-bottom: -1rem;
    transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
}

    .draft-order-total.hidden {
        transform: translate3d(0, 10.5rem, 0);
    }

    .draft-order-total button {
        margin-top: 0.5rem;
    }

a.sign-in {
    background: none;
    border: 1.5px solid white;
    border-radius: 0.7em;
    color: white;
    cursor: pointer;
    font-weight: 100;
    padding: 0.2rem 0.8rem 0.1rem 0.8rem;
    text-transform: uppercase;
    transition: 0.2s ease-out;
}

    a.sign-in:hover {
        background-color: rgba(255, 255, 255, 0.3);
        border-color: #fff2cc;
        color: #fff2cc;
    }

.valid.modified:not([type=checkbox]) {
    outline: 1px solid #26b050;
}

.invalid {
    outline: 1px solid red;
}

.validation-message {
    color: red;
}

.calendar-container {
    margin: 2rem;
    width: 42rem;
}

    .calendar-container form {
        width: 100%;
    }

    .calendar-container .btn-group {
        width: 100%;
        margin-bottom: 1rem;
    }

        .calendar-container .btn-group .btn {
            display: flex;
            align-items: center;
        }
/* ... */

